--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="media flex-column flex-md-row">
             <img
               class="mr-3 img-fluid picture mx-auto"
-              src="assets/images/profile.jpg"
+              src="assets/images/Profile.jpeg"
               alt=""
             />
             <div
@@ -99,15 +99,16 @@
                   <li class="mb-4">
                     <a href="https://twitter.com/Vedant_vibes25">
                       <span class="fa-container text-center mr-2">
-                        <i class="fab fa-twitter"></i> </span
-                      >Twitter
-                    </a>
+                        <i class="fab fa-twitter"></i></span
+                      >Twitter</a
+                    >
                   </li>
                   <li>
                     <a
                       href="https://www.instagram.com/vedanthimmatsingka/?hl=en"
-                      ><span class="fa-container text-center mr-2"
-                        ><i class="fab fa-instagram"></i></span
+                    >
+                      <span class="fa-container text-center mr-2">
+                        <i class="fab fa-instagram"></i></span
                       >Instagram</a
                     >
                   </li>
@@ -161,15 +162,17 @@
                           <h3
                             class="resume-position-title font-weight-bold mb-1"
                           >
-                            Executive Camp Manager (Ranchi Chapter)
+                            City President (Ranchi Chapter)
                           </h3>
                           <div class="resume-company-name ml-auto">
-                            "BloodConnect Foundation"
+                            <a href="https://www.bloodconnect.org/"
+                              >"BloodConnect Foundation"</a
+                            >
                           </div>
                         </div>
                         <!--//row-->
                         <div class="resume-position-time">
-                          May(2020) - Present
+                          January(2021) - Present
                         </div>
                       </div>
                       <!--//resume-timeline-item-header-->
@@ -194,7 +197,12 @@
                           reach the patients in need.
                         </p>
                         <ul>
+                          <li>
+                            Former Executive Camp Manager. August(2020) -
+                            December(2020)
+                          </li>
                           <li>Volunteer of the month. (August 2020)</li>
+                          <li>Former Volunteer. May(2020) - July(2020)</li>
                         </ul>
                       </div>
                       <!--//resume-timeline-item-desc-->
@@ -209,15 +217,17 @@
                           <h3
                             class="resume-position-title font-weight-bold mb-1"
                           >
-                            Operational HR
+                            Former Operational HR
                           </h3>
                           <div class="resume-company-name ml-auto">
-                            "Youth Empowerment Foundation"
+                            <a href="https://www.yefindia.org/"
+                              >"Youth Empowerment Foundation"</a
+                            >
                           </div>
                         </div>
                         <!--//row-->
                         <div class="resume-position-time">
-                          September(2020) - Present
+                          September(2020) - December(2020)
                         </div>
                       </div>
                       <!--//resume-timeline-item-header-->
@@ -252,15 +262,17 @@
                           <h3
                             class="resume-position-title font-weight-bold mb-1"
                           >
-                            Campus Ambassador
+                            Former Campus Ambassador
                           </h3>
                           <div class="resume-company-name ml-auto">
-                            "International Model United Nations (IMUN)"
+                            <a href="https://www.internationalmun.org/"
+                              >"International Model United Nations (IMUN)"</a
+                            >
                           </div>
                         </div>
                         <!--//row-->
                         <div class="resume-position-time">
-                          November(2020) - Present
+                          November(2020) - December(2020)
                         </div>
                       </div>
                       <!--//resume-timeline-item-header-->
@@ -310,15 +322,15 @@
                           <h3
                             class="resume-position-title font-weight-bold mb-1"
                           >
-                            Internshala Student Partner ISP20
+                            Former Internshala Student Partner ISP20
                           </h3>
                           <div class="resume-company-name ml-auto">
-                            "Internshala"
+                            <a href="https://internshala.com/">"Internshala"</a>
                           </div>
                         </div>
                         <!--//row-->
                         <div class="resume-position-time">
-                          "November(2020)-Present"
+                          "November(2020)-January(2021)"
                         </div>
                       </div>
                       <!--//resume-timeline-item-header-->
@@ -404,7 +416,7 @@
                     </h4>
                     <ul class="list-unstyled mb-4">
                       <li class="mb-2">
-                        <div class="resume-skill-name">Python</div>
+                        <div class="resume-skill-name">PYTHON</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -430,7 +442,20 @@
                         </div>
                       </li>
                       <li class="mb-2">
-                        <div class="resume-skill-name">Mathematics</div>
+                        <div class="resume-skill-name">JAVA</div>
+                        <div class="progress resume-progress">
+                          <div
+                            class="progress-bar theme-progress-bar-dark"
+                            role="progressbar"
+                            style="width: 75%"
+                            aria-valuenow="25"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          ></div>
+                        </div>
+                      </li>
+                      <li class="mb-2">
+                        <div class="resume-skill-name">MATHEMATICS</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -465,7 +490,7 @@
                     </h4>
                     <ul class="list-unstyled">
                       <li class="mb-2">
-                        <div class="resume-skill-name">Public Speaking</div>
+                        <div class="resume-skill-name">PUBLIC SPEAKING</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -478,7 +503,7 @@
                         </div>
                       </li>
                       <li class="mb-2">
-                        <div class="resume-skill-name">Poetry Writing</div>
+                        <div class="resume-skill-name">POETRY WRITING</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -491,7 +516,7 @@
                         </div>
                       </li>
                       <li class="mb-2">
-                        <div class="resume-skill-name">Volunteering</div>
+                        <div class="resume-skill-name">VOLUNTEERING</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -504,7 +529,7 @@
                         </div>
                       </li>
                       <li class="mb-2">
-                        <div class="resume-skill-name">Comunity Service</div>
+                        <div class="resume-skill-name">COMUNITY SERVICE</div>
                         <div class="progress resume-progress">
                           <div
                             class="progress-bar theme-progress-bar-dark"
@@ -574,15 +599,36 @@
                       </div>
                       <ul type="square">
                         <li>
-                          Mathematics for Machine Learning (Imperial College,
-                          London)
+                          Mathematics for Machine Learning (Imperial
+                          College,London)
+                          <a
+                            href="https://coursera.org/verify/specialization/4HBSBJAQH52V/"
+                            >👁️</a
+                          >
                         </li>
-                        <li>Data Science Math Skill ( Duke University)</li>
-                        <li>AI for Everyone (Deeplearning.ai)</li>
+                        <li>
+                          Data Science Math Skill ( Duke University)
+                          <a href="https://coursera.org/verify/7GDHNMF8G58K/"
+                            >👁️</a
+                          >
+                        </li>
+                        <li>
+                          AI for Everyone (Deeplearning.ai)
+                          <a href="https://coursera.org/verify/82NQZK7CS2UC/"
+                            >👁️</a
+                          >
+                        </li>
                         <li>
                           Introduction to IOT and embedded systems (UCL, Irvine)
+                          <a href="https://coursera.org/verify/6KF8RV5BXHGQ/"
+                            >👁️</a
+                          >
                         </li>
-                        <li>Python for Everybody (University of Michigan)</li>
+                        <li>Python specialization(University of Michigan)</li>
+                        <a
+                          href="https://coursera.org/verify/specialization/W3YD7QWLADUJ/"
+                          >👁️</a
+                        >
                       </ul>
                     </li>
                   </ul>
