--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="media flex-column flex-md-row">
             <img
               class="mr-3 img-fluid picture mx-auto"
-              src="assets/images/Profile.jpeg"
+              src="assets/images/Profile.jpg"
               alt=""
             />
             <div
